--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,14 @@
 # Site settings
-title: Pudhina
-description: >
-  A simple, minimal Jekyll theme for a personal web page and blog, focusing on white space and readability
+title: Test 
+description:
 
-baseurl: "/Pudhina" # the subpath of your site, e.g. /blog/
-url: "https://knhash.github.io" # the base hostname & protocol for your site
+baseurl: "/home" # the subpath of your site, e.g. /blog/
+url: "https://inyextciones.github.io" # the base hostname & protocol for your site
 
 author:
-  fullname: Pudhina
-  github: github
-  linkedin: linkedin
-  email: example@email.com
-
+  fullname: InyextcionES
+  github: InyextcionES
+  theme: minima
 
 # Syntax highlighting
 highlightstyle: 'agate'
