--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: InyextcionES
 baseurl: "/inicio"
 url: "inyextciones.github.io"
 github_username: InyextcionES
+destination: ./build
 theme: minima
 plugins:
   - jekyll-feed
