--- a/_config.yml
+++ b/_config.yml
@@ -15,17 +15,14 @@
 # in the templates via {{ site.myvariable }}.
 title: InyextcionES
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "/inicio" # the subpath of your site, e.g. /blog
-url: "inyextciones.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+  Página principal para InyextcionES
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  InyextcionES
 
 # Build settings
 markdown: kramdown
 theme: minima
-
 plugins:
   - jekyll-feed
 
